tag plugins refactor